--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,22 +7,129 @@
 
 * {
   font-family: "Myriad-reg";
+  color: rgba(255, 250, 240, 0.992);
 }
 
 body {
   margin: 0;
-  display: flex;
-  justify-content: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: black;
+}
+
+.header {
+  position: sticky;
+  display: flex;
+  justify-content: space-between;
+  padding: 2rem 3rem;
+}
+
+.signIn,
+.signOut,
+.playlist {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 50svh;
+}
+
+.signInButton {
+  background-color: rgb(99, 155, 99);
+  padding: 1rem 2rem;
+  border: none;
+  border-radius: 2rem;
+  cursor: pointer;
+}
+
+.signOutButton {
+  background-color: rgb(145, 82, 82);
+  padding: 1rem 2rem;
+  border: none;
+  border-radius: 2rem;
+  cursor: pointer;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: rgba(255, 250, 240, 0.992);
+}
+
+.display {
+  width: 350px;
+  display: flex;
+  overflow-x: scroll;
+  height: 400px;
+  align-items: center;
+  scroll-snap-type: x mandatory;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.display::-webkit-scrollbar {
+  display: none;
+}
+
+.selectedPlaylist {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.playlistItem {
+  scroll-snap-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .playlistCovers {
-  width: 300px;
-  height: 300px;
+  width: 200px;
+  height: 200px;
+}
+
+.trackList {
+  height: 200px;
+  width: 200px;
+  overflow-y: scroll;
+}
+.trackList::-webkit-scrollbar-track {
+  background: #151414;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgb(41, 41, 41);
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(68, 68, 68);
+  border-radius: 10px;
+}
+
+.track {
+  list-style: none;
+}
+
+.trackControls {
+  background-color: black;
+  margin-top: 1rem;
+  display: flex;
+  justify-content: space-between;
+  width: 200px;
+}
+
+.trackButton {
+  background-color: black;
+  width: 66px;
+  border: solid;
+  border-radius: 50px;
 }
