--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,9 +11,6 @@
 }
 
 body {
-  margin: 0;
-  min-width: 320px;
-  min-height: 100vh;
   background-color: black;
 }
 
@@ -24,7 +21,23 @@ body {
   padding: 2rem 3rem;
 }
 
-.signIn,
+.iPodContainer {
+  display: flex;
+  justify-content: center;
+}
+
+.signIn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 70svh;
+}
+
+.welcomeText {
+  font-size: clamp(3rem, 0.9412rem + 9.4118vw, 8rem);
+}
+
 .signOut,
 .playlist {
   display: flex;
@@ -40,6 +53,7 @@ body {
   border: none;
   border-radius: 2rem;
   cursor: pointer;
+  font-size: clamp(1rem, 0.2941rem + 0.9412vw, 2rem);
 }
 
 .signOutButton {
@@ -57,41 +71,59 @@ h1 {
 }
 
 .display {
-  width: 350px;
+  width: 250px;
   display: flex;
   overflow-x: scroll;
-  height: 400px;
+  height: 350px;
   align-items: center;
   scroll-snap-type: x mandatory;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+  gap: 1.5rem;
 }
 
 .display::-webkit-scrollbar {
   display: none;
 }
 
-.selectedPlaylist {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
 .playlistItem {
   scroll-snap-align: center;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  flex-direction: column;
+  width: 140px;
 }
 
 .playlistCovers {
-  width: 200px;
-  height: 200px;
+  width: 140px;
+  height: 140px;
+  border-radius: 10px;
+}
+
+.playlistName {
+  color: black;
+}
+
+.selectedPlaylist {
+  display: flex;
+  align-items: center;
+  height: 150px;
+  gap: 1rem;
+}
+
+.selectedImage {
+  border-radius: 5px;
+}
+
+.track {
+  list-style: none;
+  color: black;
+  cursor: pointer;
+  font-size: 15px;
 }
 
 .trackList {
-  height: 200px;
+  height: 140px;
   width: 200px;
   overflow-y: scroll;
 }
@@ -100,36 +132,22 @@ h1 {
 }
 
 ::-webkit-scrollbar {
-  width: 5px;
+  width: 3px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px rgb(41, 41, 41);
+  box-shadow: inset 0 0 20px rgb(255, 255, 255);
   border-radius: 10px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgb(68, 68, 68);
+  background: rgb(0, 0, 0);
   border-radius: 10px;
 }
 
-.track {
-  list-style: none;
-}
-
-.trackControls {
-  background-color: black;
-  margin-top: 1rem;
-  display: flex;
-  justify-content: space-between;
-  width: 200px;
-}
-
-.trackButton {
-  background-color: black;
-  width: 66px;
-  border: solid;
-  border-radius: 50px;
+.mix-blend {
+  mix-blend-mode: darken;
+  pointer-events: none;
 }
