--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,13 +73,15 @@ h1 {
 .display {
   width: 274px;
   display: flex;
-  overflow-x: scroll;
+  overflow: auto;
   height: 190px;
-  align-items: center;
   scroll-snap-type: x mandatory;
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+  scroll-behavior: smooth;
+  align-items: center;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
   gap: 1.5rem;
+  position: relative;
 }
 
 .display::-webkit-scrollbar {
@@ -87,16 +89,15 @@ h1 {
 }
 
 .playlistItem {
-  scroll-snap-align: center;
   display: flex;
   align-items: center;
   flex-direction: column;
+  scroll-snap-align: center;
 }
 
 .playlistCovers {
   width: 140px;
   height: 140px;
-  border-radius: 10px;
 }
 
 .playlistName {
